fix style: small shadow overflow

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,7 +4,7 @@
 
 @tailwind utilities;
 
-.shadow-div {
+.css-shadow-div {
   top: 4rem;
-  box-shadow: 0 1px 3px 2px rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 0px 3px 2px rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
